--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </style>
   </head>
   <body>
+    <p>hello</p>
     <canvas id='painting'></canvas>
     <script src='/socket.io/socket.io.js'></script>
     <script>
